--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,5 +15,7 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
+      - uses: actions/checkout@v4
+
       - name: Run Tests
         run: ls -a && cargo test
