--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,13 @@
 name: Run Tests
+
 on:
   - push
   - pull_request
   - workflow_dispatch
+
+env: 
+  CARGO_TERM_COLOR: always
+
 jobs:
   run_tests:
     runs-on: ubuntu-latest
