--- a/packages/macro_impl/Cargo.toml
+++ b/packages/macro_impl/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "lang_macro"
+name = "lang_macro_impl"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+proc-macro = true
+
 [dependencies]
+syn = "2.0"
+quote = "1.0"
 lang_macro_core = { workspace = true }
-lang_macro_impl = { workspace = true }
