--- a/packages/engine/Cargo.toml
+++ b/packages/engine/Cargo.toml
@@ -16,3 +16,6 @@ pretty_assertions = { workspace = true }
 default = ["cli"]
 cli = ["dep:colored"]
 no-color = ["colored/no-color"]
+
+[lib]
+doctest = false
