--- a/packages/engine/Cargo.toml
+++ b/packages/engine/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2021"
 [dependencies]
 log = { workspace = true }
 thiserror = { workspace = true }
-colored = { workspace = true, optional = true }
+colored = { workspace = true }
 lang_macro = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
 
 [features]
-default = ["cli"]
-cli = ["dep:colored"]
+default = []
 no-color = ["colored/no-color"]
 
 [lib]
